--- a/src/sass/dashboard/main.scss
+++ b/src/sass/dashboard/main.scss
@@ -5,7 +5,7 @@
 //Variables
 $app-background:     #e0e0e0;
 
-$content-width: 1200px;
+$content-width: 1200px !default;
 
 $header-padding: 0.5rem;
 $header-height: 4rem;
