refactored input groups and fixed forms example page

--- a/src/sass/modules/forms/themed-elements.scss
+++ b/src/sass/modules/forms/themed-elements.scss
@@ -296,7 +296,7 @@ $switch--off: $gray-250 !default; //Color of switch when off
 /* Custom Range Slider
   ================================================== */
 .range--custom {
-  width: 10rem;
+  // width: 10rem;
   margin: 0 auto;
 
   input[type="range"] {
