--- a/src/sass/experimental/x-card.scss
+++ b/src/sass/experimental/x-card.scss
@@ -42,10 +42,11 @@ input[type="month"] {
   }
 
   fieldset {
-    flex: 1 1 0;
+    flex: 1 1 auto;
 
     @media #{$tablet} {
       margin-right: 1rem;
+      flex: 1 1 0;
       &:last-of-type { margin-right: 0; }
     }
   }
