--- a/src/sass/experimental/x-card.scss
+++ b/src/sass/experimental/x-card.scss
@@ -16,3 +16,11 @@ h1, h2, h3, h4 { margin-bottom: $space-xxs; }
   // padding: $space-m; //do we want to default padding on cards?
   margin-bottom: $space-m;
 }
+
+@media #{$phone} {
+  .grid .card {
+    border-radius: 0;
+    margin-left: -#{$space-m};
+    margin-right: -#{$space-m};
+  }
+}
