- Rename overpanel scss file

--- a/src/sass/experimental/experimental.scss
+++ b/src/sass/experimental/experimental.scss
@@ -1,4 +1,4 @@
 @import "x-card";
-@import "titlebar";//For fullscreen pages
+@import "overpanel";//For fullscreen pages
 @import "animation";
 @import 'sign-up-custom';
