added code examples to card example page

--- a/src/sass/modules/css-grid/css-grid-main.scss
+++ b/src/sass/modules/css-grid/css-grid-main.scss
@@ -42,4 +42,4 @@ Actual CSS Grid Classes
 	.grid--sixth,         .grid-2   { @include grid-column(2); }
 }
 
-.grid { .card { margin: 0; } }
+.grid { .card { margin: 0; } } //required to span cards 100%
