--- a/src/sass/experimental/x-card.scss
+++ b/src/sass/experimental/x-card.scss
@@ -11,6 +11,10 @@ This is an EXPERIMENT and is not ready to be included in production!
 
 h1, h2, h3, h4 { margin-bottom: $space-xxs; }
 
+.card-header {
+  h1, h2, h3, h4 { margin-bottom: 0; }
+}
+
 .grid .card {
   margin-bottom: $space-m;
 }
