--- a/src/sass/dashboard/dashboard.scss
+++ b/src/sass/dashboard/dashboard.scss
@@ -1,4 +1,7 @@
-@import 'main';
+@import 'variables';
+@import 'content';
+@import 'header';
+@import 'subnav';
 @import 'placeholder';
 @import 'sidebar';
 @import 'overpanel';
