--- a/src/sass/modules/_modules.scss
+++ b/src/sass/modules/_modules.scss
@@ -11,7 +11,7 @@
 @import "modal/modal";
 @import "banner/banner";
 @import "table/table";
-@import "navigation/navigation";
+// @import "navigation/navigation";
 @import "footer/footer";
 @import "icons/icons";
 @import "spinner/spinner";
