--- a/src/sass/dashboard/main.scss
+++ b/src/sass/dashboard/main.scss
@@ -13,7 +13,7 @@ $half-padding: 0.5rem;
 $full-padding: $grid-gutter;//1rem;
 
 $header-shadow: 0px 1px 5px rgba(0, 0, 0, 0.5);
-$sub-nav-height: calc(#{$header-height} / 2);
+$sub-nav-height: 3rem;
 $sub-nav-color: $white;
 $header-gradient: linear-gradient(100deg, $blue-600, $blue-800);
 $header-background: $white;
@@ -59,7 +59,7 @@ $header-background: $white;
         margin-right: auto;
 
         margin: 0 1rem;
-        height: 2.5rem;
+        height: 2rem;
         max-width: 5rem;
         align-items: center;
 
@@ -68,14 +68,14 @@ $header-background: $white;
           height: 100%;
           display: flex;
           align-items: center;
-          color: $gray-100;
-          font-weight: 400;
+          color: $white;
+          font-weight: 600;
           font-size: 1.1rem;
           @include transition(border 0.2s ease-out);
 
-          border-bottom: 3px solid transparent;
-          &:hover  { border-bottom: 3px solid $gray-100; }
-          &.active { border-bottom: 3px solid $gray-100; }
+          border-bottom: 2px solid transparent;
+          &:hover  { border-bottom: 2px solid $white; }
+          &.active { border-bottom: 2px solid $white; }
         }
       }
     }
@@ -120,7 +120,7 @@ $header-background: $white;
   	content: "";
     box-shadow: $header-shadow;
   	width: 100%;
-  	height: calc(#{$header-height} / 2);
+  	height: $sub-nav-height;
     background-color: $sub-nav-color;
   	position: fixed;
   	top: $header-height;
@@ -149,14 +149,15 @@ $header-background: $white;
         width: 100%;
         display: flex;
         align-items: center;
-        color: $gray-900;
-        font-weight: 400;
+        color: $blue;
+        font-weight: 600;
         font-size: 1rem;
         @include transition(border 0.2s ease-out);
+        opacity: .7;
 
         border-bottom: 3px solid transparent;
-        &:hover  { border-bottom: 3px solid $gray-900; }
-        &.active { border-bottom: 3px solid $gray-900; }
+        &:hover  { opacity: 1; }
+        &.active { border-bottom: 3px solid $blue; opacity: 1; }
       }
     }
   }
