--- a/src/sass/dashboard/main.scss
+++ b/src/sass/dashboard/main.scss
@@ -15,7 +15,8 @@ $full-padding: $grid-gutter;//1rem;
 $header-shadow: 0px 1px 5px rgba(0, 0, 0, 0.5);
 $sub-nav-height: 3rem;
 $sub-nav-color: $white;
-$header-gradient: linear-gradient(100deg, $blue-600, $blue-800);
+//$header-gradient: linear-gradient(100deg, #72569b, #28336d);
+$header-gradient: #28336d;
 $header-background: $white;
 
 //Theme
@@ -38,10 +39,10 @@ $header-background: $white;
 
   &::after {
   	content: "";
-    box-shadow: $header-shadow;
+    //box-shadow: $header-shadow;
   	width: 100%;
   	height: $header-height;
-    background-image: $header-gradient;
+    background: $header-gradient;
   	position: fixed;
   	top: 0;
   	left: 0;
@@ -149,15 +150,15 @@ $header-background: $white;
         width: 100%;
         display: flex;
         align-items: center;
-        color: $blue;
+        color: $header-gradient;
         font-weight: 600;
         font-size: 1rem;
-        @include transition(border 0.2s ease-out);
-        opacity: .7;
+        @include transition(all 0.2s ease-out);
+        opacity: 1;
 
         border-bottom: 3px solid transparent;
-        &:hover  { opacity: 1; }
-        &.active { border-bottom: 3px solid $blue; opacity: 1; }
+        &:hover  { opacity: 0.7; }
+        &.active { border-bottom: 3px solid $header-gradient; opacity: 1; }
       }
     }
   }
