--- a/src/sass/modules/typography/_typography.scss
+++ b/src/sass/modules/typography/_typography.scss
@@ -56,6 +56,7 @@ h1, h2, h3, h4, h5, h6 {
   font-family: $font-family-header;
   font-weight: $font-weight-semibold;
   margin: 0;
+  margin-bottom: $space-xxs;
 }
 
 h1, .font-size--xlarge    { font-size: $font-size-xlarge; }
