--- a/src/sass/dashboard/main.scss
+++ b/src/sass/dashboard/main.scss
@@ -50,35 +50,44 @@ $header-background: $white;
   }
 
   .header-nav {
-    margin-right: auto;
+    //margin-right: auto;
+
+    ul, li, a {
+      height: 100%;
+    }
     ul {
       list-style-type: none;
       margin: 0;
       padding: 0;
       li {
         display: inline-block;
-        margin-right: auto;
+        //margin-right: auto;
 
-        margin: 0 1rem;
-        height: 2rem;
-        max-width: 5rem;
+
+        height: $header-height;
+        //max-width: 5rem;
         align-items: center;
 
         a {
-          width: 100%;
-          height: 100%;
+          padding: 0 1rem;
+          //width: 100%;
+          //height: 100%;
           display: flex;
           align-items: center;
           color: $white;
           font-weight: 600;
           font-size: 1.1rem;
-          @include transition(border 0.2s ease-out);
+          @include transition(background-color 0.2s ease-out);
 
-          border-bottom: 2px solid transparent;
-          &:hover  { border-bottom: 2px solid $white; }
-          &.active { border-bottom: 2px solid $white; }
+          //border-bottom: 2px solid transparent;
+          &:hover  {
+            background-color: lighten($header-gradient, 5%) !important;
+            opacity: 1 !important;
+          }
+          &.active { background-color: lighten($header-gradient, 5%); }
         }
       }
+      &:hover { li a { background-color: transparent; opacity: 0.5; } }
     }
   }
 }
