--- a/src/sass/modules/accordion/_accordion.scss
+++ b/src/sass/modules/accordion/_accordion.scss
@@ -11,6 +11,7 @@
     align-items: center;
     cursor: pointer;
     transition: background-color 0.2s ease-in-out;
+    h1, h2, h3, h4 { margin-bottom: 0; } //removes default margin-bottom in accordion headers
 
     i.accordion--arrow {
       transition: transform 0.1s linear;
