--- a/src/sass/dashboard/overpanel.scss
+++ b/src/sass/dashboard/overpanel.scss
@@ -1,7 +1,7 @@
 .overpanel {
 
   .title-bar {
-    background-color: $header-background;
+    background-color: $white;
     box-shadow: $header-shadow;
 
     .title-content {
