--- a/src/sass/base/colors/_colors.scss
+++ b/src/sass/base/colors/_colors.scss
@@ -10,6 +10,7 @@ $brand-light-gray: #EDEDED;
 $brand-gray: #D4D4D4;
 $brand-grey: #D4D4D4;
 $brand-black: #24292C;
+$brand-blue: #28336d;
 
 //marketing colors
 $samaritan-purple: #AF93C5;
