- expand is working

--- a/src/sass/modules/accordion/_accordion.scss
+++ b/src/sass/modules/accordion/_accordion.scss
@@ -13,7 +13,7 @@
     transition: background-color 0.2s ease-in-out;
     h1, h2, h3, h4 { margin-bottom: 0; } //removes default margin-bottom in accordion headers
 
-    i.accordion--arrow {
+    i.accordion--arrow, li.accordion--arrow {
       transition: transform 0.1s linear;
       @extend .dashing-icon--arrow-right;
       &:before { color: $black; }
